--- a/styles/UI/_popup.scss
+++ b/styles/UI/_popup.scss
@@ -72,4 +72,42 @@
       line-height: 110%; /* 17.6px */
     }
   }
+  @media (max-width: 1280px) {
+    max-width: 720px;
+    padding: 48px 80px 39px;
+    &__heading {
+      margin: 0 auto;
+      font-size: 32px;
+      margin-bottom: 24px;
+      span {
+        &::after {
+          width: 110px;
+          height: 48px;
+          left: -8px;
+          top: -1px;
+        }
+      }
+    }
+    .form {
+      max-width: 320px;
+    }
+
+    .form__subtext {
+      max-width: 319px;
+      margin: 0 auto;
+    }
+    .form__btn {
+      max-width: unset;
+    }
+    .form__input {
+      height: 48px;
+      font-size: 16px;
+    }
+  }
+
+  @media (max-width: 1024px) {
+    max-width: 596px;
+    background-position: left -103px top -33px, right -102px bottom 89px,
+      left -57px bottom -18px, top 124px right 24px;
+  }
 }
