--- a/styles/UI/_wrapper.scss
+++ b/styles/UI/_wrapper.scss
@@ -8,4 +8,12 @@
   align-items: flex-start;
   justify-content: start;
   padding: 0px 15px;
+  @media (max-width: 1280px) {
+    max-width: 1024px;
+    padding: 0px 32px;
+  }
+  @media (max-width: 920px) {
+    max-width: 768px + 48px;
+    padding: 0px 24px;
+  }
 }
