--- a/styles/_global.scss
+++ b/styles/_global.scss
@@ -11,4 +11,7 @@ section {
   @media (max-width: 920px) {
     margin-bottom: 100px;
   }
+  @media (max-width: 675px) {
+    margin-bottom: 72px;
+  }
 }
