--- a/styles/UI/_btn.scss
+++ b/styles/UI/_btn.scss
@@ -9,7 +9,7 @@
   transition: $defaultTransitionTime cubic-bezier(0.215, 0.61, 0.355, 1);
   overflow: hidden;
   white-space: nowrap;
-
+  flex-shrink: 0;
   &::after {
     content: '';
     position: absolute;
