--- a/styles/UI/_footer.scss
+++ b/styles/UI/_footer.scss
@@ -332,4 +332,72 @@
       }
     }
   }
+
+  @media (max-width: 675px) {
+    position: relative;
+    padding-top: 71px;
+    padding-bottom: 95px;
+    &__mobile-middle {
+      margin-bottom: 71.53px;
+    }
+    &__mobile-middle-wrapper {
+      max-width: 569px;
+      padding: 0px 21px;
+    }
+    &__mobile-top-wrapper {
+      max-width: 569px;
+      padding: 0px 21px;
+      flex-direction: column-reverse;
+      gap: 77px;
+    }
+    &__mobile-bottom-wrapper {
+      max-width: 569px;
+      padding: 0px 21px;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: start;
+      gap: 73px;
+    }
+    &__mobile-col {
+      width: 100%;
+      justify-content: space-between;
+      flex-direction: row;
+      padding-right: 71px;
+      gap: 16px;
+      &-item {
+        gap: 31px;
+      }
+    }
+    &__mobile-group {
+      width: 100%;
+      grid-template-columns: 141px 169px;
+      justify-content: space-between;
+      padding-right: 71px;
+    }
+    &__mobile-up-link {
+      position: absolute;
+      right: 20px;
+      margin: 0;
+      bottom: 95px;
+    }
+    &__mobile-nav {
+      width: 100%;
+      max-width: unset;
+      row-gap: 24.43px;
+      align-content: space-between;
+      max-height: 135px;
+      flex-wrap: wrap;
+      flex-direction: column;
+      align-items: flex-start;
+      &-link {
+        &:last-child {
+          max-width: 239px;
+        }
+      }
+    }
+    &__mobile-copyrights {
+      max-width: 240px;
+      gap: 14px;
+    }
+  }
 }
