--- a/styles/blocks/_offersList.scss
+++ b/styles/blocks/_offersList.scss
@@ -123,4 +123,40 @@
       }
     }
   }
+
+  @media (max-width: 675px) {
+    gap: 32px;
+    &__item {
+      border: none;
+      max-width: unset;
+      &:nth-child(even) {
+        border: none;
+        padding: 0;
+      }
+      &-header {
+        padding: 0;
+        padding-bottom: 16px;
+        border-top: none;
+      }
+      &-heading {
+        font-size: 20px;
+        letter-spacing: -0.2px;
+      }
+      &-link {
+        width: 16px;
+        height: 16px;
+        svg {
+          width: 16px;
+          height: 16px;
+        }
+      }
+      &-body {
+        padding-top: 16px;
+      }
+      &-text {
+        font-size: 16px;
+        letter-spacing: -0.48px;
+      }
+    }
+  }
 }
