--- a/styles/blocks/_subheading.scss
+++ b/styles/blocks/_subheading.scss
@@ -9,4 +9,8 @@
   line-height: 100%; /* 28.5px */
   letter-spacing: -0.57px;
   text-transform: uppercase;
+  @media (max-width: 675px) {
+    font-size: 24px;
+    letter-spacing: -0.48px;
+  }
 }
