--- a/styles/index.css
+++ b/styles/index.css
@@ -165,6 +165,11 @@ section {
     margin-bottom: 100px;
   }
 }
+@media (max-width: 675px) {
+  section {
+    margin-bottom: 72px;
+  }
+}
 
 .wrapper {
   width: 100%;
@@ -187,6 +192,12 @@ section {
   .wrapper {
     max-width: 816px;
     padding: 0px 24px;
+  }
+}
+@media (max-width: 675px) {
+  .wrapper {
+    max-width: 569px;
+    padding: 0px 21px;
   }
 }
 
@@ -284,6 +295,24 @@ section {
   .main-link__icon svg {
     width: 24px;
     height: 24px;
+  }
+}
+@media (max-width: 675px) {
+  .main-link {
+    font-size: 14px;
+    letter-spacing: -0.28px;
+    gap: 12px;
+  }
+  .main-link__icon {
+    width: 10px;
+    height: 10px;
+  }
+  .main-link__icon svg {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 10px;
+    height: 10px;
   }
 }
 
@@ -530,12 +559,21 @@ section {
     margin-right: 40px;
   }
 }
+@media (max-width: 675px) {
+  .header {
+    padding-top: 23px;
+  }
+  .header__main-link, .header__menu {
+    margin-bottom: 10px;
+  }
+}
 
 .tab-list {
   width: 100%;
   display: flex;
   align-items: center;
   gap: 13px;
+  flex-wrap: wrap;
 }
 .tab-list__item {
   position: relative;
@@ -608,6 +646,7 @@ section {
   transition: 0.23s cubic-bezier(0.215, 0.61, 0.355, 1);
   overflow: hidden;
   white-space: nowrap;
+  flex-shrink: 0;
 }
 .btn::after {
   content: "";
@@ -994,6 +1033,73 @@ section {
     max-width: 150px;
   }
 }
+@media (max-width: 675px) {
+  .footer {
+    position: relative;
+    padding-top: 71px;
+    padding-bottom: 95px;
+  }
+  .footer__mobile-middle {
+    margin-bottom: 71.53px;
+  }
+  .footer__mobile-middle-wrapper {
+    max-width: 569px;
+    padding: 0px 21px;
+  }
+  .footer__mobile-top-wrapper {
+    max-width: 569px;
+    padding: 0px 21px;
+    flex-direction: column-reverse;
+    gap: 77px;
+  }
+  .footer__mobile-bottom-wrapper {
+    max-width: 569px;
+    padding: 0px 21px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    gap: 73px;
+  }
+  .footer__mobile-col {
+    width: 100%;
+    justify-content: space-between;
+    flex-direction: row;
+    padding-right: 71px;
+    gap: 16px;
+  }
+  .footer__mobile-col-item {
+    gap: 31px;
+  }
+  .footer__mobile-group {
+    width: 100%;
+    grid-template-columns: 141px 169px;
+    justify-content: space-between;
+    padding-right: 71px;
+  }
+  .footer__mobile-up-link {
+    position: absolute;
+    right: 20px;
+    margin: 0;
+    bottom: 95px;
+  }
+  .footer__mobile-nav {
+    width: 100%;
+    max-width: unset;
+    row-gap: 24.43px;
+    align-content: space-between;
+    max-height: 135px;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .footer__mobile-nav-link:last-child {
+    max-width: 239px;
+  }
+  .footer__mobile-copyrights {
+    max-width: 240px;
+    gap: 14px;
+  }
+}
 
 .overlay {
   position: fixed;
@@ -1132,6 +1238,32 @@ section {
     background-position: left -103px top -33px, right -102px bottom 89px, left -57px bottom -18px, top 124px right 24px;
   }
 }
+@media (max-width: 675px) {
+  .popup {
+    max-width: 440px;
+    padding-top: 52px;
+    padding-left: 36px;
+    padding-right: 36px;
+    padding-bottom: 40px;
+    background-position: left -131px top -55px, right -246px bottom -46px, left -160px bottom -18px, top 62px right 37px;
+    background-size: 552px 308px, 552px 308px, 552px 308px, 60px 32px;
+  }
+  .popup__heading {
+    font-size: 20px;
+    margin-bottom: 24px;
+  }
+  .popup__heading span::after {
+    width: 70px;
+    height: 30px;
+    left: -7px;
+    top: -1px;
+  }
+  .popup .form__subtext {
+    font-size: 12px;
+    line-height: 110%;
+    max-width: 225px;
+  }
+}
 
 .link {
   display: flex;
@@ -1217,6 +1349,12 @@ section {
   line-height: 100%; /* 28.5px */
   letter-spacing: -0.57px;
   text-transform: uppercase;
+}
+@media (max-width: 675px) {
+  .subheading {
+    font-size: 24px;
+    letter-spacing: -0.48px;
+  }
 }
 
 .slogan {
@@ -1332,6 +1470,20 @@ section {
     max-width: 50%;
   }
 }
+@media (max-width: 675px) {
+  .table__cell {
+    padding: 23.5px;
+    height: 267px;
+  }
+  .table__cell-text {
+    font-size: 15.74px;
+    line-height: 110%;
+  }
+  .table__cell-count {
+    font-size: 68.684px;
+    line-height: 100%; /* 68.684px */
+  }
+}
 
 .offers-list {
   width: 100%;
@@ -1416,6 +1568,43 @@ section {
     padding-top: 0;
     padding-right: 43px;
     padding-bottom: 32px;
+  }
+}
+@media (max-width: 675px) {
+  .offers-list {
+    gap: 32px;
+  }
+  .offers-list__item {
+    border: none;
+    max-width: unset;
+  }
+  .offers-list__item:nth-child(even) {
+    border: none;
+    padding: 0;
+  }
+  .offers-list__item-header {
+    padding: 0;
+    padding-bottom: 16px;
+    border-top: none;
+  }
+  .offers-list__item-heading {
+    font-size: 20px;
+    letter-spacing: -0.2px;
+  }
+  .offers-list__item-link {
+    width: 16px;
+    height: 16px;
+  }
+  .offers-list__item-link svg {
+    width: 16px;
+    height: 16px;
+  }
+  .offers-list__item-body {
+    padding-top: 16px;
+  }
+  .offers-list__item-text {
+    font-size: 16px;
+    letter-spacing: -0.48px;
   }
 }
 
@@ -1689,6 +1878,76 @@ section {
   }
   .form__btn {
     padding: 25px;
+    border-radius: 34px;
+  }
+}
+@media (max-width: 675px) {
+  .form__heading {
+    font-size: 20px;
+  }
+  .form__group {
+    gap: 20px;
+    margin-bottom: 32px;
+  }
+  .form__group--last {
+    margin-bottom: 10px;
+  }
+  .form__row--split {
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+  }
+  .form__row--even {
+    -moz-column-gap: 8px;
+         column-gap: 8px;
+    row-gap: 10px;
+    flex-wrap: wrap;
+    justify-content: start;
+    flex-direction: row;
+  }
+  .form__input {
+    height: auto;
+    padding: 16px 24px;
+    font-size: 16px;
+  }
+  .form__radio-label {
+    width: auto;
+  }
+  .form__radio-label:first-child .form__radio {
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
+  }
+  .form__radio-label:last-child .form__radio {
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
+  }
+  .form__radio {
+    border-radius: 50px;
+    border: 1px solid #151515;
+  }
+  .form__textarea {
+    padding: 24px;
+    font-size: 16px;
+    height: 220px;
+    border-radius: 16px;
+    border: 1px solid #151515;
+  }
+  .form__footer {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: flex-start;
+    gap: 24px;
+  }
+  .form__subtext {
+    max-width: 250px;
+  }
+  .form__btn {
+    padding: 16px 40px;
+    max-width: unset;
+    width: -moz-fit-content;
+    width: fit-content;
   }
 }
 
@@ -1718,6 +1977,11 @@ section {
 @media (max-width: 920px) {
   .hgroup {
     margin-bottom: 48px;
+  }
+}
+@media (max-width: 675px) {
+  .hgroup {
+    margin-bottom: 16px;
   }
 }
 
@@ -1812,6 +2076,21 @@ section {
   margin-top: 40px;
   margin-left: auto;
 }
+@media (max-width: 675px) {
+  .mobile-menu__nav {
+    margin-top: 76px;
+  }
+  .mobile-menu__nav-list {
+    gap: 32px;
+  }
+  .mobile-menu__nav-list-item-link, .mobile-menu__nav-list-item-submenu-link {
+    font-size: 24px;
+    letter-spacing: -0.48px;
+  }
+  .mobile-menu__nav-list-item-submenu.active {
+    padding: 24px;
+  }
+}
 
 .promo-section {
   margin-bottom: 0;
@@ -1834,6 +2113,12 @@ section {
     align-items: flex-start;
     padding-top: 106px;
     padding-bottom: 119px;
+  }
+}
+@media (max-width: 675px) {
+  .promo-section__wrapper {
+    padding-top: 100px;
+    padding-bottom: 80px;
   }
 }
 
@@ -1906,6 +2191,24 @@ section {
     padding: 24px 0px;
   }
 }
+@media (max-width: 675px) {
+  .project-section__hgroup {
+    margin-bottom: 16px;
+  }
+  .project-section__sidebar, .offers-section__sidebar, .result-section__sidebar {
+    padding: 16px 0px;
+  }
+  .project-section__mobile-btn, .result-section__mobile-btn, .offers-section__mobile-btn {
+    margin-top: 32px;
+    padding: 16px 40px;
+    max-width: usnet;
+    width: -moz-fit-content;
+    width: fit-content;
+    font-size: 16px;
+    letter-spacing: -0.32px;
+    border-radius: 34px;
+  }
+}
 
 .page-list {
   position: relative;
@@ -1939,20 +2242,6 @@ section {
   display: grid;
   grid-template-columns: repeat(2, 50%);
   border-bottom: 1.2px solid #d4d4d4;
-}
-@media (max-width: 1280px) {
-  .grid-list__row {
-    border: 1.2px solid #d4d4d4;
-    border-top: none;
-  }
-  .grid-list__row .grid-list__col:first-child {
-    order: 2;
-    border-right: none;
-  }
-  .grid-list__row .grid-list__col:last-child {
-    order: 1;
-    border-right: 1.2px solid #d4d4d4;
-  }
 }
 .grid-list__row--reverse .grid-list__col:first-child {
   order: 2;
@@ -2007,6 +2296,7 @@ section {
 .grid-list__col-link {
   transform: rotate(45deg);
   transition: 0.23s;
+  padding-right: 4px;
 }
 .grid-list__col-link svg {
   width: 15.75px;
@@ -2058,6 +2348,20 @@ section {
      object-position: center;
   margin: auto;
 }
+@media (max-width: 1280px) {
+  .grid-list__row {
+    border: 1.2px solid #d4d4d4;
+    border-top: none;
+  }
+  .grid-list__col:first-child {
+    order: 2;
+    border-right: none;
+  }
+  .grid-list__col:last-child {
+    order: 1;
+    border-right: 1.2px solid #d4d4d4;
+  }
+}
 @media (max-width: 920px) {
   .grid-list {
     grid-template-rows: 379px;
@@ -2073,6 +2377,73 @@ section {
   }
   .grid-list__col-text {
     font-size: 12px;
+  }
+}
+@media (max-width: 675px) {
+  .grid-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    gap: 32px;
+  }
+  .grid-list__row {
+    display: flex;
+    gap: 8px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: start;
+    border: none;
+  }
+  .grid-list__row--reverse {
+    flex-direction: column-reverse;
+  }
+  .grid-list__row--reverse .grid-list__col:first-child {
+    order: unset;
+  }
+  .grid-list__row--reverse .grid-list__col:last-child {
+    order: unset;
+  }
+  .grid-list__col {
+    padding: 0;
+    border: none;
+  }
+  .grid-list__col:last-child {
+    border: none;
+  }
+  .grid-list__col-img {
+    height: 320px;
+  }
+  .grid-list__col-header {
+    order: 2;
+    margin-bottom: 21px;
+  }
+  .grid-list__col-body {
+    order: 3;
+  }
+  .grid-list__col-footer {
+    margin-bottom: 24px;
+    order: 1;
+  }
+  .grid-list__col-text {
+    max-width: unset;
+    font-size: 14.915px;
+  }
+  .grid-list__col-img {
+    height: 332px;
+  }
+  .grid-list__col-heading {
+    font-size: 20.753px;
+  }
+  .grid-list__col-text {
+    font-size: 14px;
+  }
+  .grid-list__category {
+    display: inline-block;
+    padding: 6px 12px;
+    font-size: 12px;
+    border-radius: 100px;
+    background: #d4d4d4;
   }
 }
 
@@ -2111,6 +2482,16 @@ section {
     margin-bottom: 49px;
   }
 }
+@media (max-width: 675px) {
+  .offers-section__slogan {
+    margin-top: 12px;
+    margin-bottom: 48px;
+    max-width: unset;
+    font-size: 16px;
+    letter-spacing: -0.48px;
+  }
+}
+
 .result-section {
   padding-top: 120px;
   padding-bottom: 72px;
@@ -2168,6 +2549,17 @@ section {
     margin-bottom: 48px;
   }
 }
+@media (max-width: 675px) {
+  .result-section {
+    padding-top: 56px;
+  }
+  .result-section__heading {
+    margin-bottom: 32px;
+    font-size: 24px;
+    line-height: 120%; /* 28.8px */
+    max-width: unset;
+  }
+}
 
 .request-section__content {
   width: 100%;
@@ -2222,5 +2614,15 @@ section {
 @media (max-width: 920px) {
   .request-section__heading {
     font-size: 38px;
+  }
+}
+@media (max-width: 675px) {
+  .request-section__heading {
+    max-width: 351px;
+    font-size: 24px;
+    line-height: 120%; /* 28.8px */
+  }
+  .request-section__content {
+    gap: 32px;
   }
 }/*# sourceMappingURL=index.css.map */
