--- a/styles/blocks/_subheading.scss
+++ b/styles/blocks/_subheading.scss
@@ -13,4 +13,8 @@
     font-size: 24px;
     letter-spacing: -0.48px;
   }
+  @media (max-width: 475px) {
+    font-size: 24px;
+    letter-spacing: -0.48px;
+  }
 }
