--- a/styles/UI/_footer.scss
+++ b/styles/UI/_footer.scss
@@ -408,6 +408,7 @@
     }
     &__mobile-col {
       padding-right: 34px;
+      gap: 16px;
     }
     &__mobile-tel-link.tel-link,
     &__mobile-mail-link.mail-link {
@@ -423,7 +424,8 @@
     }
     &__mobile-group {
       grid-template-columns: 141px 160px;
-      gap: 32px;
+      row-gap: 32px;
+      column-gap: 16px;
 
       padding-right: 0;
     }
@@ -458,6 +460,20 @@
         width: 17px;
         height: 17px;
       }
+    }
+  }
+  @media (max-width: 374px) {
+    &__mobile-col {
+      padding: 0;
+    }
+    &__mobile-group {
+      grid-template-columns: 141px 128px;
+    }
+    &__mobile-col {
+      flex-direction: column;
+    }
+    &__mobile-col-item:last-child {
+      margin-left: auto;
     }
   }
 }
